--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -1,117 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    tools:context=".CommonScreens.SignUpActivity">
+    android:background="@color/white"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="20dp">
 
-    <!-- Image at the top -->
-
-    <!-- Sign Up text -->
-
-    <!-- Welcome text below the Sign Up text -->
-
-    <!-- Name input field -->
-
+    <!-- Logo -->
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="363dp"
-        android:layout_height="210dp"
-        android:src="@drawable/image_3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/logo"
+        android:layout_width="60dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="19dp"
+        android:contentDescription="App Logo"
+        android:src="@drawable/logo" />
 
+    <!-- Title -->
     <TextView
-        android:id="@+id/signUpText"
-        android:layout_width="166dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="16dp"
-        android:text="Sign Up"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView" />
-
-    <TextView
-        android:id="@+id/welcomeText"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Welcome"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signUpText" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="4dp"
+        android:text="Create Account"
+        android:textColor="@android:color/black"
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/etName"
-        android:layout_width="0dp"
+    <!-- Subtitle -->
+    <TextView
+        android:id="@+id/subtitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Enter Name"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcomeText"/>
+        android:layout_marginTop="10dp"
+        android:text="Join our community of agricultural professionals"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="14sp" />
 
-    <!-- Email or phone input field -->
+    <!-- Full Name -->
     <EditText
-        android:id="@+id/etEmailPhone"
-        android:layout_width="0dp"
+        android:id="@+id/editTextText"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Email or Phone Number"
-        android:inputType="textEmailAddress|phone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etName"
-        android:layout_marginTop="10dp"/>
-
-    <!-- Password input field (moved after Email or Phone field) -->
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:drawableRight="@android:drawable/ic_lock_lock"
-        android:ems="10"
-        android:hint="Enter password"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etEmailPhone"/>
-
-    <!-- Submit button -->
-
-    <EditText
-        android:id="@+id/confirmpassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="28dp"
-        android:drawableRight="@android:drawable/ic_lock_lock"
-        android:ems="10"
-        android:hint="Confirm password"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        android:background="@drawable/edit_text_bg"
+        android:drawableStart="@drawable/user_ic"
+        android:drawablePadding="10dp"
+        android:hint="Full Name"
+        android:inputType="text"
+        android:padding="15dp" />
 
-    <Button
-        android:id="@+id/btnSubmit"
-        android:layout_width="0dp"
+    <!-- Email Address -->
+    <EditText
+        android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableStart="@drawable/email_ic"
+        android:drawablePadding="10dp"
+        android:hint="Email Address"
+        android:padding="15dp" />
+
+    <!-- Phone Number -->
+    <EditText
+        android:id="@+id/etPhone"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableStart="@drawable/phone_ic"
+        android:drawablePadding="10dp"
+        android:hint="Phone Number"
+        android:padding="15dp" />
+
+    <!-- Password -->
+    <EditText
+        android:id="@+id/etPassword"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableStart="@drawable/password_ic"
+        android:drawablePadding="10dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:padding="15dp" />
+
+    <!-- Confirm Password -->
+    <EditText
+        android:id="@+id/etConfirmPassword"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_text_bg"
+        android:drawableStart="@drawable/password_ic"
+        android:drawablePadding="10dp"
+        android:hint="Confirm Password"
+        android:inputType="textPassword"
+        android:padding="15dp" />
+
+    <!-- Terms and Privacy Policy -->
+    <CheckBox
+        android:id="@+id/cbTerms"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="10dp"
+        android:pointerIcon="arrow"
+        android:text="I agree to the Terms of Service and Privacy Policy"
+        android:textColor="#2E7D32"
+        android:textSize="12sp" />
+
+    <!-- Sign Up Button -->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnSignUp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/filled_btn_bg"
         android:text="Sign Up"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textAllCaps="false"
+        android:textColor="@color/white" />
+
+    <!-- Already have an account? Sign In -->
+    <TextView
+        android:id="@+id/tvSignIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Already have an account? Sign In"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="14sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:drawableStart="@drawable/guard_ic"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/inter"
+        android:gravity="center_horizontal"
+        android:text="Your information is secure with us"
+        android:textColor="#6B7280"
+        android:textSize="14sp" />
+
+</LinearLayout>
