--- a/app/src/main/res/layout/user_home_item.xml
+++ b/app/src/main/res/layout/user_home_item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="230dp"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="10dp"
     app:cardCornerRadius="12dp">
@@ -31,35 +31,30 @@
             android:text="Product Name"
             android:textSize="14sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <TextView
+            android:id="@+id/product_price"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal">
+            android:maxLines="1"
+            android:layout_marginHorizontal="12dp"
+            android:text="₹ 300"
+            android:layout_marginBottom="12dp"
+            android:textColor="#2E7D32"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/product_price"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingHorizontal="20dp"
-                android:maxLines="1"
-                android:text="₹ 300"
-                android:textColor="@android:color/holo_green_dark"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/add_button"
-                android:layout_width="0dp"
-                android:layout_height="37dp"
-                android:layout_weight="1"
-                android:backgroundTint="@android:color/holo_green_light"
-                android:text="Add"
-                android:layout_marginHorizontal="10dp"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-
+        <Button
+            android:id="@+id/add_button"
+            android:layout_width="wrap_content"
+            android:layout_height="37dp"
+            android:layout_marginHorizontal="10dp"
+            android:backgroundTint="#2E7D32"
+            android:text="Add"
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="10dp"
+            android:textSize="12sp" />
     </LinearLayout>
+
+
 </androidx.cardview.widget.CardView>
