--- a/app/src/main/res/layout/activity_tractors_details2.xml
+++ b/app/src/main/res/layout/activity_tractors_details2.xml
@@ -548,18 +548,20 @@
             android:layout_height="match_parent"
             android:layout_marginTop="14sp"
             android:orientation="vertical">
+
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/signInBtn"
+                android:id="@+id/verify_docs"
                 android:layout_width="358dp"
                 android:layout_height="52dp"
 
+                android:layout_marginHorizontal="16sp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_bg"
-                android:layout_marginHorizontal="16sp"
                 android:text="Verify Documents"
                 android:textAllCaps="false"
                 android:textColor="#4CAF50" />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_proceed_rental"
                 android:layout_width="358dp"
