--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -23,7 +23,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center"
-                app:srcCompat="@drawable/back_arrow" />
+                app:srcCompat="@drawable/back_arrow_new" />
             <TextView
                 android:id="@+id/textView22"
                 android:layout_width="wrap_content"
@@ -54,7 +54,7 @@
                 android:layout_height="100dp"
                 android:src="@drawable/profile1_ic"
                 android:layout_marginTop="24sp"
-                android:contentDescription="Profile Picture"
+                android:contentDescription="@string/profile_picture"
                 android:layout_marginHorizontal="7.5dp"
                 android:layout_marginBottom="8dp"/>
 
