--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -2,25 +2,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:gravity="center">
+    android:orientation="vertical">
 
-    <CheckBox
-        android:id="@+id/chkEnglish"
+    <!-- Top Section: Privacy and Security -->
+
+    <!-- Center Section: Language Selection -->
+    <LinearLayout
+        android:id="@+id/backLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="English" />
+        android:padding="12dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-    <CheckBox
-        android:id="@+id/chkHindi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="हिंदी" />
+        <!-- Back Arrow (Clickable) -->
+        <ImageView
+            android:id="@+id/backArrow_Language"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/back_arrow_new"
+            android:contentDescription="Back"
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingEnd="8dp" />
 
-    <CheckBox
-        android:id="@+id/chkTamil"
+        <!-- Title -->
+        <TextView
+            android:id="@+id/textView30"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Language Settings"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="தமிழ்" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <CheckBox
+            android:id="@+id/chkEnglish"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="English" />
+
+        <CheckBox
+            android:id="@+id/chkHindi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="हिंदी" />
+
+        <CheckBox
+            android:id="@+id/chkTamil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="தமிழ்" />
+    </LinearLayout>
+
 </LinearLayout>
