--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -16,10 +16,11 @@
         android:gravity="center_vertical">
 
         <!-- Back Arrow (Clickable) -->
-        <ImageView
+        <ImageButton
             android:id="@+id/backArrow_Language"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@color/transparent"
             android:src="@drawable/back_arrow_new"
             android:contentDescription="Back"
             android:clickable="true"
@@ -30,7 +31,8 @@
         <TextView
             android:id="@+id/textView30"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:textAlignment="center"
             android:layout_weight="1"
             android:fontFamily="@font/inter_semibold"
