--- a/app/src/main/res/layout/activity_tractors_details2.xml
+++ b/app/src/main/res/layout/activity_tractors_details2.xml
@@ -23,12 +23,16 @@
             android:orientation="horizontal"
             >
 
-            <ImageView
-                android:id="@+id/imageViewback_rent"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                app:srcCompat="@drawable/back_arrow"
-                />
+            <ImageButton
+                android:id="@+id/backArrow_page1"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@color/transparent"
+                android:src="@drawable/back_arrow_new"
+                android:contentDescription="Back"
+                android:clickable="true"
+                android:focusable="true"
+                android:paddingEnd="8dp" />
 
             <TextView
                 android:id="@+id/textView22"
@@ -38,6 +42,7 @@
                 android:fontFamily="@font/inter_semibold"
                 android:text="Tractor Details"
                 android:textAlignment="center"
+              android:layout_gravity="center"
                 android:textSize="18sp" />
 
             <ImageView
@@ -45,6 +50,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginLeft="15dp"
+                android:layout_gravity="center"
                 android:src="@drawable/share_ic" />
 
 
