added api for post property

--- a/app/src/main/res/layout/activity_add_rental.xml
+++ b/app/src/main/res/layout/activity_add_rental.xml
@@ -152,6 +152,7 @@
             android:paddingTop="8dp" />
 
         <LinearLayout
+            android:id="@+id/uploadPhotosLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/dotted_border"
