--- a/app/src/main/res/layout/activity_add_rental.xml
+++ b/app/src/main/res/layout/activity_add_rental.xml
@@ -169,7 +169,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Upload property photos"
+                android:text="Upload Documents"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:paddingTop="8dp" />
