--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main87686"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:fillViewport="true">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,45 +17,52 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="25dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageViewBackBtn"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:scaleType="fitCenter"
+                android:padding="15dp"
                 app:srcCompat="@drawable/backarrow_1" />
 
             <TextView
                 android:id="@+id/textView22"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:fontFamily="@font/inter_semibold"
                 android:text="Product Details"
                 android:textAlignment="center"
+                android:gravity="center"
                 android:textSize="18sp" />
 
             <ImageView
                 android:id="@+id/imageViewshare"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:scaleType="centerInside"
+                android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
                 app:srcCompat="@drawable/share_ic" />
 
             <ImageView
                 android:id="@+id/imageViewsave"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:scaleType="centerInside"
+                android:layout_gravity="center_vertical"
                 app:srcCompat="@drawable/save_ic" />
         </LinearLayout>
 
         <!-- Product Image -->
         <ImageView
             android:id="@+id/productImage"
-            android:layout_width="390dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:src="@drawable/home_placeholder" />
@@ -85,6 +91,7 @@
                 android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_medium"
@@ -220,6 +227,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/key1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_semibold"
@@ -227,6 +235,7 @@
                 android:textSize="18sp"></TextView>
 
             <TextView
+                android:id="@+id/keyfeatures"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/dot_ic"
@@ -288,6 +297,7 @@
                 android:padding="4dp">
 
                 <TextView
+                    android:id="@+id/safety"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="16sp"
@@ -301,6 +311,7 @@
                 </TextView>
 
                 <TextView
+                    android:id="@+id/safety_precautions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/dot2_ic"
@@ -361,7 +372,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView47"
+                android:id="@+id/technical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_semibold"
@@ -376,7 +387,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView54"
+                    android:id="@+id/technical_common"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -385,7 +396,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView55"
+                    android:id="@+id/technical_specifications1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_medium"
