--- a/app/src/main/res/layout/addrental_item.xml
+++ b/app/src/main/res/layout/addrental_item.xml
@@ -62,6 +62,7 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
